[feat] #109 - 주요언어도 스케쥴링에 맞게 진행할 수 있도록 구현 및 일부 로직 변경